# VideoGame

./: CMakeLists.txt  readMe.md
Components/: AIcomponent.cpp  AIcomponent.h  AnimationComponent.cpp  AnimationComponent.h  AttributeComponent.cpp  AttributeComponent.h  HitboxComponent.cpp  HitboxComponent.h  MovementComponent.cpp  MovementComponent.h
GUI/: PauseMenu.cpp  PauseMenu.h  PlayerGui.cpp  PlayerGui.h
Google_tests/: CMakeLists.txt  CollisionTEST.cpp  TileCollisionTEST.cpp  WorldBoundsTEST.cpp  runAllTests.cpp
Google_tests/gtest_assets/: tileCollisionTestMap.txt  worldboundTestMap.txt
Google_tests/lib/googletest/: CHANGES  CMakeLists.txt  Makefile.am  README.md
Google_tests/lib/googletest/cmake/: internal_utils.cmake
Google_tests/lib/googletest/codegear/: gtest.cbproj
Google_tests/lib/googletest/docs/: AdvancedGuide.md  FAQ.md  Primer.md  Samples.md
Google_tests/lib/googletest/include/gtest/: gtest-message.h  gtest-param-test.h  gtest-param-test.h.pump  gtest-printers.h  gtest-spi.h  gtest-typed-test.h  gtest.h
Google_tests/lib/googletest/include/gtest/internal/: gtest-internal.h  gtest-linked_ptr.h  gtest-param-util-generated.h  gtest-param-util-generated.h.pump  gtest-param-util.h  gtest-port.h  gtest-tuple.h  gtest-tuple.h.pump  gtest-type-util.h  gtest-type-util.h.pump
Google_tests/lib/googletest/samples/: sample3-inl.h  sample6_unittest.cc  sample9_unittest.cc
Google_tests/lib/googletest/scripts/: gen_gtest_pred_impl.py  pump.py  upload.py
Google_tests/lib/googletest/src/: gtest-death-test.cc  gtest-internal-inl.h  gtest-printers.cc  gtest.cc
Google_tests/lib/googletest/test/: gtest-param-test_test.cc  gtest-port_test.cc  gtest-printers_test.cc  gtest-test-part_test.cc  gtest-tuple_test.cc  gtest-typed-test2_test.cc  gtest-typed-test_test.cc  gtest-typed-test_test.h  gtest_assert_by_exception_test.cc  gtest_environment_test.cc  gtest_json_output_unittest.py  gtest_list_tests_unittest_.cc  gtest_output_test.py  gtest_output_test_.cc  gtest_pred_impl_unittest.cc  gtest_throw_on_failure_ex_test.cc  gtest_unittest.cc  gtest_xml_output_unittest.py  gtest_xml_output_unittest_.cc  gtest_xml_test_utils.py
Google_tests/lib/googletest/xcode/Samples/FrameworkSample/WidgetFramework.xcodeproj/: project.pbxproj
Google_tests/lib/googletest/xcode/gtest.xcodeproj/: project.pbxproj
Map/: TileMap.cpp  TileMap.h
Tiles/: DefaultTile.cpp  DefaultTile.h  EnemySpawner.cpp  EnemySpawner.h  Tile.cpp  Tile.h
Weapon/: Bullet.cpp  Bullet.h  Gun.cpp  Gun.h  Item.cpp  Item.h  Rifle.cpp  Rifle.h
assets/maps/: map1.txt  map2.txt  test.slmp
cmake_modules/: FindSFML.cmake
config/: editorstate_keybinds.ini  graphics.ini  mainmenu_keybinds.ini  supportedKeys.ini  window.ini
entities/: BaldZombie.cpp  BaldZombie.h  Enemy.cpp  Enemy.h  Entity.cpp  Entity.h  GameCharacter.cpp  GameCharacter.h
headers/: Button.h  GSettings.h  GUI.h  GameEngine.h  PreCompHeaders.cpp  PreCompHeaders.h
source/: Button.cpp  GSettings.cpp  GUI.cpp  GameEngine.cpp  main.cpp
states/: EditorState.cpp  EditorState.h  GameState.cpp  GameState.h  MainMenuState.cpp  MainMenuState.h  SettingState.cpp  SettingState.h  State.cpp  State.h
